  (thanks Lynn!) (bug #45723)
- fixed bug that caused our TIME type to not be supported (bug #45457)
- fixed unsigned type problems with entity framework (bug #45077)  
- fixed formatting of single, double, and decimal values when used with entity framework
  in cultures that use the comma as a decimal separator (bug #44455)  
- fixed GetSByte method to actually return an sbyte  (bug #46620)
  
Version 6.0.4
- fixed regression where using stored procs with datasets (bug #44460)
- fixed compilation under VS 2005 (bug #44822)
- fixed support for bool data type in entity framework support
- fixed regression where a user could no longer call GetBytes on a guid column (bug #44507)
- made some fixes to the syntax coloring of sql inside visual studio
- fixed display name of triggers inside server explorer
- fixed trigger editing
- fixed tokenization of escaped backslashes (bug #44960)
- fixed conversion of binary(16) type to guid for entity framework models (bug #44986)
- migrated from CTC to VSCT for our menus and buttons.  Also the VisualStudio project will also
  now load and builder under VS2005 or VS2008 loading the proper targets files as needed
- fixed global Add New menu options with the Visual STudio integration
- improved ad-hoc registration utility so that it handles VS 2005 and VS 2008 properly
- added SunConnect registration
- fixed sql that is generated for commands in data set (bug #44512)
- unsigned values are now handled.  Please read the release notes!

Version 6.0.3 - 4/22/09
- fixed broken connection prompting
- fixed installer that was no longer referencing the right folders for Visual Studio assemblies [bug #44141]
- made integer column types returned with table and column collections use the same data type
  when referencing MySql 4.1 servers and MySql 5.0+ servers (bug #44123)
- lots of unreported bug fixes

Version 6.0.2
- fixed registration problem with Visual studio (bug #44064)